syntax = "proto3";

option csharp_namespace = "AuthenticationService.Grpc";

package auth;

service AuthService {
  rpc Login (LoginGrpcRequest) returns (LoginGrpcResponse);
  rpc Register (RegisterGrpcRequest) returns (RegisterGrpcResponse);
  rpc RefreshToken (RefreshTokenGrpcRequest) returns (RefreshTokenGrpcResponse);
  rpc Logout (LogoutGrpcRequest) returns (LogoutGrpcResponse);
  rpc VerifyEmail (RegisterVerifyGrpcRequest) returns (GenericGrpcResponse);
  rpc VerifyOtp (VerifyOtpGrpcRequest) returns (RegisterGrpcResponse);
}

message Users {
  string name = 1;
  string email = 2;
  string avatarUrl = 3;
}

message LoginGrpcRequest {
  string email = 1;
  string password = 2;
}

message LoginGrpcResponse {
  string email = 1;
  string password = 2;
  string accessToken = 3;
  string refreshToken = 4;
}

message RegisterGrpcRequest {
  string fullName = 3;
  string email = 1;
  string password = 2;
}

message RegisterGrpcResponse {
  Users user = 1;
  string message = 2;
}

message RefreshTokenGrpcRequest {
  string refreshToken = 1;
}

message RefreshTokenGrpcResponse {
  string accessToken = 1;
  string refreshToken = 2;
}

message LogoutGrpcRequest {
  // No userId needed
}

message LogoutGrpcResponse {
  string message = 1;
}

message RegisterVerifyGrpcRequest {
  string name = 1;
  string email = 2;
  string password = 3;
}

message VerifyOtpGrpcRequest {
  string email = 1;
  string otpCode = 2;
}

message GenericGrpcResponse {
  string message = 1;
}